dashboard: UX -- fix health icons on IE/Firefox
Use relative positioning for the icons, since only Chrome seems to
behave with absolute in a modal

https://bugzilla.redhat.com/show_bug.cgi?id=1361006

(cherry picked from commit 0905ed5a4189b18d613c3754dc472012bcdc00c7)

--- a/dashboard/static/app.css
+++ b/dashboard/static/app.css
@@ -192,8 +192,8 @@ path.line.highlight {
 
 .health-icon {
   float:right;
-  position: absolute;
-  right: 122px;
+  position: relative;
+  right: 107px;
 }
 
 .accordion {
